Sethicus and Tyrasshana

--- a/Story/OphidianCivilization.tex
+++ b/Story/OphidianCivilization.tex
@@ -317,14 +317,36 @@ Even in their time of greatness they feared these relics of an elder age.
 
 
 
-\subsubsection[Wars against the Shugul]{Wars against the \moonthings}
-\target{Ophidians drive out Shugul}
-Before the \ophidians, the \shugul \moonthings and their \moongods dominated \Miith.
-The fledging \ophidian civilization waged bitter wars against their predecessors, and eventually they gained the upper hand.
-They destroyed the \shugul cities and drove them out.
-Soon only the \shugul capital of \Nom was left.
+\subsubsection{Wars against the Nibir}
+\target{Nibir}
+\index{Nibir}
+Before the \ophidians, the Nibir dominated \Miith. 
+The Nibir were aliens who came from the world of Phaeton. 
+
+A Nibir looked like a giant \emph{Anomalocaris}, but with many long spindly jointless legs like the spines on a \emph{Hallucigenia}, and with many soft \emph{Hallucigenia}-like tentacles on its back. 
+
+They were served by a lesser race called the Phaetonians. 
+A Phaetonian was roughly human-sized or slightly larger. 
+It resembled a \emph{Marrella} (a trilobite-like creature from the Burgess Shale), but with fewer limbs: 
+Four long multi-jointed crab- or spider-like legs and four slimmer \quo{arms}. 
+
+For thousands of years the cruel Phaetonians used the early \ophidians as slaves or hunted them for sport. 
+But the \ophidians fought. 
+
+The fledging \ophidian civilization waged bitter wars against the Nibir and eventually prevailed. 
+They destroyed all Nibir and Phaetonians on \Miith. 
 
 Compare this to the wars waged by humanity against the elder races in \cite{RobertEHoward:TheShadowKingdom}. 
+
+
+
+
+
+\subsubsection[Wars against the Shugul]{Wars against the \moonthings}
+\target{Ophidians drive out Shugul}
+The \ophidians waged war against the \shugul \moonthings and their \moongods.
+They destroyed the \shugul cities and drove them out.
+Soon only the \shugul capital of \Nom was left.
 
 Later \hr{Sethicus invades Nom}{\Sethicus invaded \Nom} and built his own temple-city of \Baltherium.
 
@@ -373,13 +395,10 @@ Only a few mad cultists worshipped them, and with little success.
 \target{Ophidians against Lords of the Deep}
 The \hs{Lords of the Deep} had fought against the \moonthings. 
 After the \ophidians had weakened the \moonthings, the Lords of the Deep returned, now more powerful. 
-They conquered the planet and enslaved most \ophidians. 
+They conquered the planet and enslaved some \ophidians. 
 
-The \ophidians were slaves for thousands of years. 
-But they never gave up.
-They remembered that they had fought against elder races before and prevailed. 
-They fought back. 
-After a long struggle, they eventually managed to turn the tide yet again. 
+The \ophidians fought back. 
+They remembered that they had prevailed against elder races before. 
 They vanquished the Lords of the Deep and cast them out, back into the deep sea. 
 The \ophidians were now truly the rulers of \Miith. 
 
@@ -388,13 +407,16 @@ The \ophidians were now truly the rulers of \Miith.
 
 
 \subsubsection{Religion taboo}
-After the \ophidians had won their freedom from the Lords of the Deep, they promised to never again serve or worship a foreign race. 
+After the \ophidians had won their freedom from the Nibir and other elder races, they promised to never again serve or worship a foreign race. 
 They pledged themselves to the dream of \ophidian supremacy:
 The \ophidians should rule and bow to no masters. 
 
 A strong cultural taboo arose. 
 It was forbidden to worship anything as a god. 
 The \ophidian culture was highly \hr{Ophidian philosophy}{atheistic and rational}. 
+
+They also established a taboo against certain types of sorcery. 
+\Sethicus would later challenge that taboo. 
 
 
 
@@ -463,6 +485,21 @@ The \nephilim would remain slaves until \hr{Origin of Aryothim}{the advent of th
 After the victories \hr{Ophidians drive out Shugul}{against the \shugul} and \hr{Ophidians against Lords of the Deep}{against the Lords of the Deep}, the \ophidians fought against the \vorcanths. 
 The \ophidians wanted to colonize all the Realms of the system. 
 The \vorcanths would not let them. 
+
+
+
+
+
+
+
+
+
+\subsection{\Ophidian subraces}
+\target{Enslaved Ophidian subraces}
+The \caisith made several genetically engineered subraces, especially of the Worm caste.
+These \caisith variants were mostly enslaved and subjugated. 
+
+Compare to the thunder warriors and astrotelepaths of \emph{Warhammer 40,000}. 
 
 
 
