--- a/Story/Sentinels04Notes.tex
+++ b/Story/Sentinels04Notes.tex
@@ -1274,27 +1274,14 @@ So, in the end, it turns out that \Azraid{} was \hr{Daggerrain's blind spot}{\ps
 \subsubsection{The Ark}
 \target{Ark}
 \index{Ark}
-The plan (a collaborative effort between \Azraid{} and \Ishnaruchaefir) is to use the wild threads of the collapsing Shroud to \quo{cut} free a chunk of \Miith{}, forming a pocket Realm. 
-They then hope to be able to close the way behind them, setting up a makeshift barrier by piecing together fragments of the shattered \CrystalSphere{} and Shroud.
-
-They will then have formed a new mini-Realm, a micro-\Miith{} torn loose. 
-This will be their Ark. 
-A small population of \Miithians should be able to escape in this Realm. 
-The makeshift barrier will keep the \banes{} out for a short while, while the masterminds use their magic to twist the fabric of space around them propel the Ark away through the universe, to a place where the \banes{} cannot easily find them. 
-
-The Ark is built from the ruins of the \hr{Sethicus tomb}{tomb of \Sethicus}, which lies in the Realm of \hr{Neevrai}{\Neevrai}. 
+\Azraid{} and \Ishnaruchaefir plan to use an ancient artifact to destroy \Daggerrain: the Ark. 
+The Ark is based on the ruins of the \hr{Sethicus tomb}{tomb of \Sethicus}, which lies in the Realm of \hr{Neevrai}{\Neevrai}. 
 
 It will be difficult, but \Azraid{} is ready. 
 He has spent millennia preparing for this day, and he is prepared to sacrifice his life to see it through. 
 And he has \ps{\Ishnaruchaefir} awesome Gnosis helping him. 
 
-In the end, \Ishnaruchaefir{} and Ramiel end up on the Ark, while \Azraid{} destroys himself in the process. 
-
-Perhaps the Ark is not a chunk of planet, but a spaceship. 
-Perhaps a commandeered \bane/\resphan{} ship. 
-If so, it is huge. 
-A colony ship. 
-A world-ship. 
+In the end \Azraid{} destroys himself.  
 
 The Ark was actually an unfinished relic created by \Sethicus. 
 It was a part of \hr{Sethicus plan}{his masterplan} to escape \Miith before \hr{Sethican eschatology}{it was destroyed}. 
@@ -1358,7 +1345,6 @@ This should be a climactic thing, another \quo{everything almost going awry at t
 \subsection{Ramiel drains the \ps{\Voidbringer}{} power}
 Ramiel tries to betray the \Voidbringer. 
 This is similar to how Astronema betrays Dark Specter and drains his power in \emph{Power Rangers in Space}. 
-%It stems from Ramiel's sublime arrogance and megalomania (see section \ref{Ramiel's megalomania}). 
 
 He absorbs some of the \ps{\Voidbringer}{} power. 
 
@@ -1668,3 +1654,68 @@ In a way, this is \hr{Ishnaruchaefir sees three futures}{\ps{\Ishnaruchaefir} ni
   You must be strong, Warmaster. \\
   Never forget that.
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section[The Return of Tyrasshana]{The Return of \Tiamat}
+In secret, \Tiamat was behind the \resphain. 
+She was the Voidbringer.
+Her goal was to absorb all intelligent life on \Miith and unite them all in one great Concord. 
+She found the \banes and conquered them and made them her slaves, part of her Concord hivemind. 
+That was one of the reasons why the \banes were so horrid: 
+They were not individuals. 
+They were, in a sense, soulless\dash but also part of something greater and terrifying. 
+
+\Tiamat masterminded the fall of Semiza and the rise of the \resphain.
+She made Semiza corrupt the \resphain to her service. 
+She made them invade \Miith and wage war against the \ophidian races. 
+
+\Tiamat wanted to grow strong and escape from her awful prison. 
+The advent of \Lithrim finally freed her. 
+She was now free. 
+Ramiel, \Azeraid and \Iscrafel managed to destroy \Daggerrain and the \bane hordes, but they could not stop the Mother. 
+\Tiamat was now awake, and she would devour the world. 
+
+But all was not completely bleak. 
+\Tiamat's merger with the \banes made her more stagnant and decaying and destructive than she might otherwise have been.
+The heroes had destroyed this, the worst part of her. 
+And in their own quests they had grown strong.
+They now represented a mighty and virtuous force of positive change. 
+\Tiamat absorbed them, and in doing so she absorbed their virtue and strenght and made it part of her.
+So they would live on in her, and their deeds and legacy would help steer the great Mother. 
+Now \Tiamat would devour everything on the planet and then move on to conquer the universe. 
+
+And the Mother spread her wings. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
