--- a/Story/SethicusRise.tex
+++ b/Story/SethicusRise.tex
@@ -13,28 +13,9 @@
 
 
 
-\section{\Sethicus (\yds{Sethicus creates Dragons})}
-\Sethicus was an \ophidian.
-He was controversial because he used \xs{}-based sorcery (\hr{Ophidians and XS}{which the \ophidian{} establishment frowned upon}).
-He wanted to stage a coup against the existing \ophidian oligarchy, which he saw as decadent and ineffectual, something that was holding the \ophidian people back. 
-He wanted to seize power and achieve \quo{great things} (whatever that meant). 
-
-\Sethicus had imperial ambitions. 
-
-\citebandsong{Nile:InTheirDarkenesShrines}{Nile}{
-  Invocation to Seditious Heresy
-}{
-  And Here I Stand\\
-  I who would be master of the Black Earth\\
-  Have summoned you here secretly\\
-  You who are faithful to me\\
-  To share in the Black Kingdom that shall be\\
-  Tonight we shall witness\\
-  The breaking of the chains which Enslave us\\
-  And the birth of a Dark Empire
-}
-
-
+\section{\Sethicus and his research}
+\Sethicus was an \ophidian polymath.
+He was controversial because he delved into sorceries \hr{Ophidians and XS}{which the \ophidian{} establishment frowned upon}. 
 
 
 
@@ -60,7 +41,8 @@ He inspired many followers to live fast like him.
 In those decades and centuries, technology developed just as quickly as it might for a short-lived race.
 
 \Sethicus himself was a brilliant scientist and made many exciting new discoveries in various fields. 
-Alienist sorcery was his favourite subject and later came to dominate his life and career. 
+Later in his life, he became preoccupied with alienist sorcery.
+This came to dominate his life and career. 
 
 \Sethicus was a primus motor when it came to pushing the boundaries of space travel and establishing an interstellar \ophidian empire. 
 Before him, they had been a spacefaring race for millennia, but rarely ventured beyond their solar system, and they had done no colonization beyond the occasional research station in the solar system. 
@@ -76,7 +58,7 @@ Before him, they had been a spacefaring race for millennia, but rarely ventured 
 To procure enough energy they used dark spells to draw energy from the void and the Heart, and they sacrificed vast numbers of humanoids to feed their machines. 
 
 \Sethicus himself helped build this network of power plants.
-He used complex black spells which he alone fully understood to suck even more energy from the dying universe so it could fuel his \hr{Sethicus plan}{masterplan}. 
+He used complex black spells which only he fully understood to suck even more energy from the dying universe so it could fuel his \hr{Sethicus plan}{masterplan}. 
 
 Compare to the Immortal Emperor and the Astronomican in \cite{RPG:Warhammer40000}, which requires the sacrifice of countless \humans daily to sustain them.
 
@@ -98,9 +80,11 @@ She followed him around on his journeys and learned much.
 
 
 
-\subsubsection{\Sethicus's motivation}
-\Sethicus wanted to make the world a better place, lift his people out of barbaric warfare, oppression of Worms and all-round suffering.
-Later his priorities changed. 
+\subsubsection[Tyrasshana's]{\Tiamat's motivation}
+\Tiamat wanted to make the world a better place, lift her people out of warfare and strife, oppression of Worms and all-round suffering.
+She saw the existing \ophidian oligarchy as decadent and corrupt. 
+She saw the dystopia of the \hr{Enslaved Ophidian subraces}{enslaved \caisith subraces} and wanted to change it.
+She wanted to seize power and achieve \quo{great things} (whatever that meant). 
 
 
 
@@ -591,6 +575,7 @@ Only then could he envision the \TrueDraconic tongue and map out the \draconic t
 
 
 
+\section{\Sethicus (\yds{Sethicus creates Dragons})}
 \subsection{\Dragons are created}
 \target{Origin of Dragons}
 \target{Sethicus creates Dragons}
